# ad4-lang

./: Cargo.toml
ad4-lang/: Cargo.toml
ad4-lang/src/: block.rs  expression.rs  keyword.rs  lexer.rs  literal.rs  main.rs  operator.rs  prelude.rs  statement.rs  token.rs  value.rs  variable.rs
ad4-lang/src/expression/: eval.rs  ifs.rs  loops.rs  parse.rs  test.rs  vec.rs
ad4-lang/test/: fibonacci.txt
macros/: Cargo.toml
macros/src/: lib.rs
src/: expression.rs  lexer.rs  literal.rs  main.rs  operator.rs  prelude.rs  statement.rs  tests.rs  value.rs
