[workspace]
resolver = "2"

package.authors = ["AD4MANTIS"]
package.version = "0.1.0"
package.edition = "2024"

members = ["ad4-lang", "macros"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = { level = "forbid", priority = 1 }
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
thiserror = "2.0.12"
color-eyre = { version = "0.6.4", default-features = false }
strum = { version = "0.27", features = ["derive"] }
